[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapIP"
version = "0.1.0"
description = "Display your external IP address on an ASCII world map"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "Pillow>=6.2.1",
    "rich",
    "numpy"
]

[project.scripts]
mapIP = "mapIP.mapIP:runFromCLI"

[tool.setuptools]
packages = ["mapIP"]

[tool.ruff]
# Include ruff configuration from ruff.toml
extend = "ruff.toml"
